tests/fixtures/positive/comments/DocumentationOverPrivateProperty.kt
package comments

class Example {
    /** The internal counter. */
    private val count = 0
}
