tests/fixtures/negative/comments/DocumentationOverPrivateProperty.kt
package comments

class Example {
    private val count = 0
}
